--- a/经验合并.md
+++ b/经验合并.md
@@ -130,7 +130,22 @@
     而引向主旨大意，所以主句也可能位于段末，甚至段中。
 16. 有时没有明显的主题句，必须仔细阅读，领会字里行间所传递的主旨大意（在这种
     情下，主旨大意是通过暗示而非直接陈述的方式表达的
-17. 完成总结
+17. 定位词一般为出现频率不太高的实词
+18. 看不懂的地方直接跳过而不是细细揣摩，要掌握大意
+19. 看一题，看原文，做题，再看下一题。。。
+20. 题干中的生词才是重要的，原文中的生词没那么重要
+21. TFNG：一模一样选 T，正好相反选 F，既不一样又不相反跟原文没什么关系选 NG
+22. 中心句常出现的地方：
+    - **最后一句**
+    - **第二句**
+    - 自然段首句
+    - 疑问句
+    - 举例前的观点句
+    - 转折词所在的句子
+    - 强调句式或强调语气词所在的句子
+    - 用来定义功能的句子
+    - 下一段句首
+23. 完成总结
     - 总结由多个相互关联的句子构成，所以答案必须既符合语境（含义）又符合句子的
       语法规范。
     - 可以以此预需要寻找哪种类型的单词（如一个单数/复数名词、动词、形容词等）
@@ -154,6 +169,87 @@
    建议用20分钟完成任务1，用40分钟完成任务2。
 
 ### 3.1 任务1
+
+
+
+1. 编故事的能力要出色，能写出一个连贯合理的故事，
+2. 文字表达不需要过于学术，但是要偏向地道表达，多添加细节
+3. 注意书信写作的时态，有可能在一篇文章里使用超过5种时态。
+
+
+
+书信写作的内容包括很宽的范围
+
+- 道歉；
+- 感谢；
+- 投诉；
+- 建议，
+- 申请，
+- 邀请，
+- 介绍
+- 寻求帮助
+
+
+
+
+
+书信格式介绍
+
+1. 最好是左边对齐，每段之间空一整行，
+2. 称呼—Dear 名字/头衔/Sir or Madam；
+3. 结尾部分一定需要比较礼貌的收尾
+   kind regards-sincerely/faithfully-lots of love
+
+- 第一段通常简单开头—— I am writing this letter to 介绍写信的目的
+- 正文的分段没有固定要求一一般来说题目会给出一件事的大概介绍，然后要求
+  完成三个具体的任务。
+- 结尾部分一般需要表示感谢或者提出要求
+  I would be grateful if you could...
+  My request is that...
+  I will be looking forward to your reply.
+
+
+
+地图题
+
+- 按功能介绍地点比按方位（东南西北）介绍好
+
+流程图题
+
+- 必须使用一般现在时态；
+- 可以使用定语从句；
+- 不能使用祈使句，可以用被动句
+
+
+
+议论文
+
+单面赞同/单面反对 比混合着写（有赞同有反对）分高，要明确观点。问好处多于坏处吗则需要对比好处坏处。
+
+很多时候选具体的话题/方面比宏观的方面更容易写，选择自己有把握、能拓展的方向写
+
+
+
+议论文类型1：讨论双方观点，并且给出你的个人意见
+
+写作结构：
+
+- 介绍背景
+- 讨论A的观点
+- 讨论B的观点
+- 自己的观点（同意A/B/其他）
+
+
+
+一篇议论文包括一个介绍段，2-3个核心段和一个总结段。要善于拓展核心段的内容，拓展细节，可以多举例子凑字数
+
+
+
+
+
+
+
+
 
 ![image-20200421233837945](/Users/pj/Desktop/yasi1/assets/image-20200421233837945.png) 
 
