--- a/词汇积累.md
+++ b/词汇积累.md
@@ -87,6 +87,10 @@
 
 
 
+### 北极、南极等地理词汇
+
+
+
 ### No. 场景词
 
 1. Driving license No:
@@ -165,6 +169,19 @@
 
 
 
- 
+ ### 顺序连接词
 
-  
+
+
+  ### 常见的比较的表达方法
+
+比较级、最高级
+
+
+
+### 常见短语搭配
+
+
+
+### 常见名言
+
