--- a/经验合并.md
+++ b/经验合并.md
@@ -241,6 +241,28 @@
 
 
 
+
+
+题目里的两个观点一般都有道理，但是你要有一定的偏向。在介绍段用“虽然···但是···”的句子预告你的观点偏向，然后在核心段依次展开。结尾段的时候先强化强，再弱化弱（这个题型的结尾段非常重要）
+
+
+
+强弱观点的结构安排
+
+
+
+1. 一句话引出争论或者背景事实。 In my opinion, (although) ....., (but)......（预告个人观点，轻松结束介绍段） although、but 二者不能共存。
+2. 核心段1：顺着题目展开弱的观点（TS是现成的）。On the one hand...
+3. 核心段2：顺着题目展开强的观点（TS是现成的）。On the other hand...
+4. 一般两句话。先直接重复自己偏向的观点，并且重复原因。然后再用“虽
+   然——但是——”或者别的方法来弱化弱的一方。
+
+
+
+短语句模板比长语句模板更好
+
+
+
 一篇议论文包括一个介绍段，2-3个核心段和一个总结段。要善于拓展核心段的内容，拓展细节，可以多举例子凑字数
 
 
