--- a/词汇积累.md
+++ b/词汇积累.md
@@ -45,7 +45,12 @@
 43. community社区
 44. complex综合建筑物
 45. naturereserve自然保护区
-46. 
+46. tutorial
+47. board 
+48. broad   海外的？
+49. life expectance 寿命？
+50. resemble 看起来像; 显得像
+51. 
 
 ### 证件场景词
 
@@ -174,6 +179,10 @@
 
 
 ### 转折连接词
+
+
+
+### 常用介词短语
 
 
 
